[package]
name = "hyperhyper"
version = "0.0.1"
authors = ["Alex Newman <posix4e@gmail.com>"]

[dependencies]
url = "0.2.34"

[dependencies.mio]
git = "https://github.com/carllerche/mio"

[dependencies.eventual]
git = "https://github.com/carllerche/eventual"

[dependencies.curl]
git = "file:///home/posix4e/projects/curl-rust"
